# melib

./: .gitignore  README.md  setup.cfg
melib/: excel.py  xt.py
melib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
melib/data/: bearing.xlsx  mats.xlsx  sgear.xlsx  shaft.xlsx  vbelt.xlsx
melib/docs/: api.rst  conf.py  requirements.txt
melib/docs/_build/doctrees/: api.doctree  environment.pickle  index.doctree
melib/docs/_build/html/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
melib/docs/_build/html/_modules/: index.html
melib/docs/_build/html/_modules/melib/: library.html  xt.html
melib/docs/_build/html/_sources/: index.rst.txt
