[metadata]
name = melib
version = 1.0.0
author = Hal Gurgenci
author_email = h.gurgenci@uq.edu.au
description = Library functions to help with machine element design projects.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Gurgenci/melib
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU GPL
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.0
