[metadata]
name = melib
version = 1.0.12
author = Hal Gurgenci
author_email = h.gurgenci@uq.edu.au
description = Library functions to help with machine element design projects.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Gurgenci/melib
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
python_requires = >=3.0

[options.data_files]
data = melib/data/mats.xlsx,melib/data/bearing.xlsx,melib/data/sgear.xlsx,melib/data/shaft.xlsx,melib/data/vbelt.xlsx